# boidflocking

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  bootstrap.bat
app/: BoidFlockingAlgorithm.pro  CMakeLists.txt  MyOpenGLWidget.cpp  MyOpenGLWidget.h  boid.cpp  boid.h  boid_simulation.cl  boidsim.cpp  boidsim.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  openclwrapper.cpp  openclwrapper.h  platforminfodialog.cpp  platforminfodialog.h  platforminfodialog.ui
app/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
